kubernetes-manifests/2.aircat-platform.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: aircat-system
spec:
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:alpine
        resources: {}
        ports:
        - containerPort: 8086
        volumeMounts:
            - name: influxdb-data
              mountPath: /var/lib/influxdb
      volumes:
        - name: influxdb-data
          emptyDir: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: aircat-system
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        resources: {}
        ports:
        - containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: aircat-system
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        resources: {}
        ports:
        - containerPort: 6379
