kubernetes-manifests/2.aircat-platform.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: aircat-system
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
  - port: 8086
    targetPort: 8086

---

apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: aircat-system
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - port: 8080
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: aircat-system
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
