kubernetes-manifests/3.aircat.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aircat-src
  namespace: aircat-system
spec:
  type: ClusterIP
  selector:
    app: aircat-srv
  ports:
    - name: tcp
      port: 9000
      targetPort: 9000
    - name: http
      port: 8080
      targetPort: 8080
